Fix image spacing

--- a/style.css
+++ b/style.css
@@ -1343,17 +1343,17 @@ a:active {
 	margin: 1.5em 0; /* 24px 0 */
 }
 
-.page-content :first-child,
-.entry-content :first-child,
-.entry-summary :first-child,
-.comment-content :first-child {
+.page-content > :first-child,
+.entry-content > :first-child,
+.entry-summary > :first-child,
+.comment-content > :first-child {
 	margin-top: 0;
 }
 
-.page-content :last-child,
-.entry-content :last-child,
-.entry-summary :last-child,
-.comment-content :last-child {
+.page-content > :last-child,
+.entry-content > :last-child,
+.entry-summary > :last-child,
+.comment-content > :last-child {
 	margin-bottom: 0;
 }
 
